--- a/resources/css/userpage.css
+++ b/resources/css/userpage.css
@@ -1,3 +1,22 @@
 body {
 	font-family: 'Lato', sans-serif;
 }
+.navbar-brand {
+	font-size: 2em;
+}
+.navbar-nav .nav-item.nav-link {
+	font-weight: bold;
+	font-size: 1.2em;
+	color: #FFFFFF;
+}
+.navbar-nav .nav-item.nav-link:hover {
+	color: #BADAE0;
+	transition: color 0.2s ease;
+}
+.btn-primary {
+	background-color: #1768AC;
+	border: #1768AC;
+}
+.btn-primary:hover {
+	background-color: #0F4877;
+}
