--- a/resources/css/userpage.css
+++ b/resources/css/userpage.css
@@ -20,3 +20,89 @@ body {
 .btn-primary:hover {
 	background-color: #0F4877;
 }
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-template-rows: 1fr repeat(4, 2fr) 1fr;
+	grid-template-areas:
+		"username username uploadNew uploadNew"
+		"semester1 semester2 semester1New semester2New"
+		"semester3 semester4 semester3New semester4New"
+		"semester5 semester6 semester5New semester6New"
+		"semester7 semester8 semester7New semester8New"
+		". . saveChanges cancel";
+}
+.username-header {
+	grid-area: username;
+	width: 100%;
+	height: 100%;
+}
+.upload {
+	grid-area: uploadNew;
+	width: 100%;
+	height: 100%;
+}
+.semester {
+	background-color: gray;
+	border: 1px solid black;
+	width: 100%;
+	height: 100%;
+}
+.saveChanges {
+	grid-area: saveChanges;
+	width: 100%;
+	height: 100%;
+}
+.cancel {
+	grid-area: cancel;
+	width: 100%;
+	height: 100%;
+}
+.sem1 {
+	grid-area: semester1;
+}
+.sem2 {
+	grid-area: semester2;
+}
+.sem3 {
+	grid-area: semester3;
+}
+.sem4 {
+	grid-area: semester4;
+}
+.sem5 {
+	grid-area: semester5;
+}
+.sem6 {
+	grid-area: semester6;
+}
+.sem7 {
+	grid-area: semester7;
+}
+.sem8 {
+	grid-area: semester8;
+}
+.sem1New {
+	grid-area: semester1New;
+}
+.sem2New {
+	grid-area: semester2New;
+}
+.sem3New {
+	grid-area: semester3New;
+}
+.sem4New {
+	grid-area: semester4New;
+}
+.sem5New {
+	grid-area: semester5New;
+}
+.sem6New {
+	grid-area: semester6New;
+}
+.sem7New {
+	grid-area: semester7New;
+}
+.sem8New {
+	grid-area: semester8New;
+}
