--- a/resources/css/account.css
+++ b/resources/css/account.css
@@ -49,7 +49,7 @@ body {
     margin: 2em 5em 2em 5em;
 }
 
-@media only screen and (max-width: 992px) {
+@media only screen and (max-width: 1200px) {
     .grid-container {
         display: grid;
         grid-template-columns: 1fr 2px 1fr;
@@ -67,7 +67,50 @@ body {
             ". div saveChanges";
         margin: 2em 5em 2em 5em;
     }
+    .btn-primary.upload-button {
+        width: 100%;
+        display: block;
+    }
+    .upload {
+        padding: 0 1em;
+    }
 }
+
+@media only screen and (max-width: 992px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 1fr repeat(8, auto) 1fr repeat(8,auto);
+        grid-template-areas:
+            "uploadNew"
+            "semester1New"
+            "semester2New"
+            "semester3New"
+            "semester4New"
+            "semester5New"
+            "semester6New"
+            "semester7New"
+            "semester8New"
+            "saveChanges"
+            "username"
+            "semester1"
+            "semester2"
+            "semester3"
+            "semester4"
+            "semester5"
+            "semester6"
+            "semester7"
+            "semester8";  
+        margin: 2em 5em 2em 5em;
+    }
+    .btn-primary.upload-button {
+        width: 60%;
+    }
+    .upload {
+        padding: 1em;
+    }
+}
+
 .divider {
     grid-area: div;
     border-left: 2px solid #d3d3d3;
@@ -175,12 +218,14 @@ body {
 }
 
 .save-button {
-    width: 65%;
+    width: 35%;
     height 60%;
+    margin-right: 1em;
 }
 
 .cancel-button {
-    width: 65%;
+    width: 35%;
     height 60%;
+    margin-left: 1em;
 }
 
