--- a/resources/css/resources.css
+++ b/resources/css/resources.css
@@ -25,3 +25,9 @@ body {
 .btn-primary:hover {
     background-color: #0F4877;
 }
+
+.divider {
+    grid-area: div;
+    border-left: 2px solid #d3d3d3;
+    height: 100%;
+}
