--- a/resources/css/class.css
+++ b/resources/css/class.css
@@ -8,48 +8,53 @@
         "metadata div commentsHeader"
         "prereq div comments"
         "classDesc div comments"
-        "lectures div comments"
-        "recitations div comments";
+        "desc div comments"
+        "sections div comments";
     margin: 2em 5em 2em 5em;
 }
 
 .class-header {
     grid-area: classHeader;
     display: flex;
+    padding-right: 2em;
+}
+
+.spacer {
+    flex-grow: 1;
 }
 
 .header-text{
-    font-weight: bold;
     font-size: 2.5em;
     padding-right: 0.5em;
     align-self: center;
 }
 
-.class-number {
-    color: gray;
+.subheader-text{
     font-size: 2em;
     padding-right: 0.5em;
 }
 
 .register-button {
-    padding: 0.3em 0.8em;
-    font-size: 1.7em;
-    font-weight: bold;
     align-self: center;
 }
 
-.class-open {
+.status {
     font-size: 3em;
+    padding-right: 0.5em;
+    align-self: center;
+}
+
+.sections {
+    font-size: 1.2em;
+    padding: 0;
+}
+
+.open {
     color: #33cc33;
-    padding-right: 0.5em;
-    align-self: center;
 }
 
-.class-closed {
-    font-size: 3em;
+.closed {
     color: #ff0000;
-    padding-right: 0.5em;
-    align-self: center;
 }
 
 .class-rating {
@@ -57,41 +62,64 @@
     display: flex;
 }
 
-.class-rating h1 {
-    display: inline-block;
-    padding-right: 1em;
-}
-
 .class-metadata {
     grid-area: metadata;
+    font-size: 1.5em;
+    padding-right: 2em;
+}
+
+.metadata-number {
+    padding: 0 1em 0 0.5em;
+}
+
+.prereqs {
+    font-size: 1.5em;
 }
 
 .comments-header {
     grid-area: commentsHeader;
+    font-size: 2.5em;
+    display: flex;
+    align-items: flex-end;
 }
 
 .stars {
     font-size: 3em;
     color: gold;
     align-self: center;
+    margin-left: 1em;
 }
 
-.class-prequisites {
-    grid-area: preqreq;
+.class-prerequisites {
+    grid-area: prereq;
+    padding-bottom: 1em;
+    padding-right: 2em;
 }
 
 .class-description {
     grid-area: classDesc;
+    display: flex;
+    padding-right: 2em;
 }
 
-.class-lectures {
-    grid-area: lectures;
+.description {
+    grid-area: desc;
+    font-size: 1.2em;
+    padding-right: 1.67em;
 }
 
-.class-recitations {
-    grid-area: recitations;
+.class-sections {
+    grid-area: sections;
+    padding-right: 2em;
 }
 
+.class-sections table th {
+    font-size: 1.4em;
+}
+
+.class-sections table td {
+    font-size: 1.2em;
+}
 .comments {
     grid-area: comments;
 }
