--- a/resources/css/class.css
+++ b/resources/css/class.css
@@ -1,21 +1,26 @@
-.grid-container {
-    display: grid;
-    grid-template-columns: 50% 2em 50%;
-    grid-template-rows: repeat(6, auto);
-    grid-template-areas: 
-        "classHeader div rating"
-        "metadata div commentsHeader"
-        "prereq div comments"
-        "classDesc div comments"
-        "desc div comments"
-        "sections div comments";
-    margin: 2em 5em 2em 5em;
+.container-fluid {
+    display: flex;
+    margin: 0;
+    width: 100%;
+    padding: 2em 5em 2em 5em;
+    flex-direction: row;
+    flex-wrap:wrap;
+}
+
+.column-left {
+    padding-right: 2em;
+    width: 50%;
+    height: auto;
+}
+
+.column-right {
+    padding-left: 2em;
+    width: 50%;
+    height: 0;
 }
 
 .class-header {
-    grid-area: classHeader;
     display: flex;
-    padding-right: 2em;
 }
 
 .spacer {
@@ -59,14 +64,11 @@
 }
 
 .class-rating {
-    grid-area: rating;
     display: flex;
 }
 
 .class-metadata {
-    grid-area: metadata;
     font-size: 1.5em;
-    padding-right: 2em;
 }
 
 .metadata-number {
@@ -78,7 +80,6 @@
 }
 
 .comments-header {
-    grid-area: commentsHeader;
     font-size: 2.5em;
     display: flex;
     align-items: flex-end;
@@ -92,26 +93,15 @@
 }
 
 .class-prerequisites {
-    grid-area: prereq;
     padding-bottom: 1em;
-    padding-right: 2em;
 }
 
 .class-description {
-    grid-area: classDesc;
     display: flex;
-    padding-right: 2em;
 }
 
 .description {
-    grid-area: desc;
     font-size: 1.2em;
-    padding-right: 1.67em;
-}
-
-.class-sections {
-    grid-area: sections;
-    padding-right: 2em;
 }
 
 .class-sections table th {
@@ -133,7 +123,99 @@
 }
 
 .class-comments {
-    grid-area: comments;
+    overflow-y: scroll;
+}
+
+.add-comments {
+    padding: 0.5em 2em 0 2em;
+    margin-bottom: 1em;
+    margin-right: 1em;
+}
+
+.add-comments form textarea {
+    resize: none;
+    height: 6em;
+    font-size: 1.2em;
+}
+
+.add-comments form .bold {
+    font-size: 1.5em;
+    margin-top: 0.2em;
+}
+
+.comment-button.bold.btn.btn-primary{
+    float: right;
+    font-size: 1.2em;
+    margin-top: 0.5em;
+    margin-right: 1em;
+}
+
+.rating {
+    display: block;
+    position: relative;
+    height: auto;
+    display: inline-block;
+    font-size: 2rem;
+    margin-top: 0.1em;
+}
+
+.rating label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: auto;
+    cursor: pointer;
+    margin: 0;
+}
+
+.rating label:last-child {
+    position: static;
+}
+
+.rating label:nth-child(1) {
+    z-index: 5;
+}
+
+.rating label:nth-child(2) {
+    z-index: 4;
+}
+
+.rating label:nth-child(3) {
+    z-index: 3;
+}
+
+.rating label:nth-child(4) {
+    z-index: 2;
+}
+
+.rating label:nth-child(5) {
+    z-index: 1;
+}
+
+.rating label input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.rating label .icon {
+    float: left;
+    color: transparent;
+}
+
+.rating label:last-child .icon {
+    color: #d3d3d3;
+}
+
+.rating:not(:hover) label input:checked ~ .icon,
+.rating:hover label:hover input ~ .icon {
+    color: gold;
+}
+
+.rating label input:focus:not(:checked) ~ .icon:last-child {
+    color: #d3d3d3;
+    text-shadow: 0 0 5px #09f;
 }
 
 .comment {
@@ -169,33 +251,23 @@
 
 /* media queries */
 
-/* laptop/desktop screens with 150% page zoom. same layout for mobile */
-@media only screen and (max-width: 1280px) {
-    .grid-container {
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: repeat(6, auto) 2em repeat(3, auto);
-        grid-template-areas:
-            "classHeader"
-            "metadata"
-            "prereq"
-            "classDesc"
-            "desc"
-            "sections"
-            "div"
-            "rating"
-            "commentsHeader"
-            "comments";
-        margin: 2em 5em 2em 5em;
+/* laptop/desktop screens with 125%+ page zoom. same layout for mobile */
+@media only screen and (max-width: 1538px) {
+    .column-left {
+        width: 100%;
+        padding-bottom: 2em;
     }
     
+    .column-right {
+        width: 100%;
+        padding-top: 2em;
+    }
     .divider {
         border-top: 2px solid #d3d3d3;
         border-left: 0;
     }
     
-    .class-header, .class-metadata, .class-prerequisites, 
-    .class-description, .description, .class-sections {
-        padding-right: 0;
+    .class-comments {
+        overflow: auto;
     }
 }
